# rust-practice

cli-app-in-rust/grrs/: Cargo.toml  README.md
cli-app-in-rust/grrs/src/: lib.rs  main.rs
cli-app-in-rust/grrs/tests/: cli.rs
